js refine + optimize convergence of all primitive handling, only wrap as js-object when needed e.g. when calling functions on or on property access all constructors return primitive / java mirror version this means all bindings will be clean java objects using java.util.Date since it is mutable